--- a/economy-web-app/package.json
+++ b/economy-web-app/package.json
@@ -9,6 +9,7 @@
     "firebase": "^8.2.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-minimal-pie-chart": "^8.1.0",
     "react-redux": "^7.1.0-rc.1",
     "react-redux-firebase": "^3.0.0",
     "react-router-dom": "^5.2.0",
