--- a/economy-web-app/package.json
+++ b/economy-web-app/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.6.2",
     "firebase": "^8.2.3",
     "react": "^17.0.1",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.1",
     "react-minimal-pie-chart": "^8.1.0",
     "react-redux": "^7.1.0-rc.1",
