--- a/economy-web-app/package.json
+++ b/economy-web-app/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.1",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
     "react-minimal-pie-chart": "^8.1.0",
     "react-redux": "^7.1.0-rc.1",
     "react-redux-firebase": "^3.0.0",
